# knowledge-graph-applied

./: pyproject.toml
.ipynb_checkpoints/: nlp_with_spacy-checkpoint.ipynb
